# Tc1D

./: CMakeLists.txt  pyproject.toml
.github/workflows/: build-wheels.yml
src/RDAAM_He/: RDAAM.cpp  RDAAM_He.cpp
src/ketch_aft/: ketch.c  ketch.h
src/tc1d/: tc1d.py
